--- a/prizmer/templates/choose_service.html
+++ b/prizmer/templates/choose_service.html
@@ -157,15 +157,15 @@ $(function() {
 		<br>
 		<br>
 		<div>
-		{% load staticfiles %} <img onclick="load_service('service_file')" id="download-ico" src="{%static "images/download2-ico64.png" %}" alt="Загрузить файл">
-		{% load staticfiles %} <img onclick="load_service('service_electric')" id="electric-ico" src="{%static "images/digital5-ico64.png" %}" alt="Электрика">
-		{% load staticfiles %} <img  onclick="load_service('service_water')" id="water-ico" src="{%static "images/impulse5-ico64.png" %}" alt="Вода">
-		{% load staticfiles %} <img  onclick="load_service('service_change_electric')" id="change-ico" src="{%static "images/change2-ico64.png" %}" alt="Замена счётчиков-электричество и тепло!">
-		{% load staticfiles %} <img  onclick="load_service('service_get_info')" id="change-ico" src="{%static "images/tech3-ico64.png" %}" alt="Информация по объекту">
-		{% load staticfiles %} <img  onclick="load_service('service_balance_load')" id="balance-ico" src="{%static "images/balance2-ico64.png" %}" alt="Загрузка балансных групп">
-		{% load staticfiles %} <img  onclick="load_service('service_load30_page')" id="load30-ico" src="{%static "images/to_db2-ico64.png" %}" alt="Загрузка получасовок">
-		{% load staticfiles %} <img  onclick="load_service('service_user_account')" id="user-ico" src="{%static "images/users-ico64.png" %}" alt="Добавление пользователей ЛК">
-		{% load staticfiles %} <img  onclick="load_service('service_del_meters')" id="del-ico" src="{%static "images/del-ico64.png" %}" alt="Удалёние приборов">
+		{% load staticfiles %} <img onclick="load_service('service_file')" id="download-ico" src="{%static "images/download2-ico64.png" %}" title="Загрузить файл">
+		{% load staticfiles %} <img onclick="load_service('service_electric')" id="electric-ico" src="{%static "images/digital5-ico64.png" %}" title="Цифровые приборы">
+		{% load staticfiles %} <img  onclick="load_service('service_water')" id="water-ico" src="{%static "images/impulse5-ico64.png" %}" title="Импульсные приборы">
+		{% load staticfiles %} <img  onclick="load_service('service_change_electric')" id="change-ico" src="{%static "images/change2-ico64.png" %}" title="Замена счётчиков-электричество и тепло!">
+		{% load staticfiles %} <img  onclick="load_service('service_get_info')" id="change-ico" src="{%static "images/tech3-ico64.png" %}" title="Информация по объекту">
+		{% load staticfiles %} <img  onclick="load_service('service_balance_load')" id="balance-ico" src="{%static "images/balance2-ico64.png" %}" title="Загрузка балансных групп">
+		{% load staticfiles %} <img  onclick="load_service('service_load30_page')" id="load30-ico" src="{%static "images/to_db2-ico64.png" %}" title="Загрузка Профилей мощности">
+		{% load staticfiles %} <img  onclick="load_service('service_user_account')" id="user-ico" src="{%static "images/users-ico64.png" %}" title="Добавление пользователей ЛК">
+		{% load staticfiles %} <img  onclick="load_service('service_del_meters')" id="del-ico" src="{%static "images/del-ico64.png" %}" title="Удалёние приборов">
 		<p>
 		<span><strong>Выберите файл &nbsp;</strong></span>
 			<select onchange="change_wb();" name="choice_file" id="choice_file">
