--- a/prizmer/templates/service/service_electric.html
+++ b/prizmer/templates/service/service_electric.html
@@ -18,9 +18,17 @@
         <br><br>
 		<span><strong>Загрузка Объектов и Абонентов &nbsp;</strong></span>
         <span onclick="load_service('load_electric_objects')" class="button" id="object_load_button">Загрузить</span> &nbsp;{{object_status}}
-		<br>
+		
         <br><br>
-		<span><strong>Загрузка  счётчиков&nbsp;</strong></span>
+      <!--   <form>
+            {% load staticfiles %} <img src="{%static "images/question2-ico20.png" %}" title ="Если вы отметите флаг, то для загружаемой группы счётчиков будут считывать выбранные параметры. Для квартир рекомендуем НЕ выбирать данные параметры, т.к. это будет увеличивать размеры БД и снижать скорость работы." > <b>Для электро-счётчиков:   </b>
+           <br><input type="checkbox" name="option1" value="reactiv">Необходимо чтение реактивной энергии R+<Br>
+           <input type="checkbox" name="option2" value="halfs">Необходимо чтение получасовых профилей мощности A+ и R+<Br> 
+          </form> -->
+        <img src="{%static "images/question2-ico20.png" %}" title ="Для электрических ПУ: Если необходимо получение из прибора Получасовых профилей мощности и/или Реактивной энергии, сделайте отметки в прогрузочной ведомости. Для квартир рекомендуем НЕ выбирать данные параметры, т.к. это будет увеличивать размеры БД и снижать скорость работы." >
+		<br>
+        <span><strong>Загрузка  счётчиков&nbsp;</strong></span>        
+          
         <span onclick="load_service('load_electric_counters')" class="button" id="counter_load_button">Загрузить</span> &nbsp;{{counter_status}}
     </div>
 	
