add_com_port_register_excel

--- a/prizmer/templates/service/service_get_info.html
+++ b/prizmer/templates/service/service_get_info.html
@@ -14,7 +14,9 @@
  <div class="meters_change_block">
  &nbsp;&nbsp; Создать Паспорт объекта по ресурсу
 		<br><br>
-        &nbsp;&nbsp;&nbsp; <a class="button" href ="../../service/get_electric_progruz/"> Электрика </a></span> 
+        &nbsp;&nbsp;&nbsp; <a class="button" href ="../../service/get_electric_progruz/"> Электрика по tcp/ip </a></span> 
+        <br><br>
+        &nbsp;&nbsp;&nbsp; <a class="button" href ="../../service/get_electric_progruz_com/"> Электрика по COM-порту</a></span> 
 		<br><br>
         &nbsp;&nbsp;&nbsp; <a class="button" href ="../../service/get_water_progruz/"> Вода </a></span> 
 		<br><br>
