Electric fixed, added new reports

--- a/prizmer/templates/control.html
+++ b/prizmer/templates/control.html
@@ -47,6 +47,9 @@
 			<option value="95">95. Профиль показаний за период по A+ и R+ график</option>
 			<option value="98">98. Восстановленый суточный срез A+ и R+</option>
 			<option value="99">99. Получасовой профиль показаний A+ и R+</option>
+            <option value="102">102. Показания на дату. 3 Тарифа</option>
+            <option value="104">104. Показания на дату. 2 Тарифа</option>
+            <option value="106">106. Показания на дату. 1 Тариф</option>
         </select>
         <div id ="export_report">-------</div>
 		
