--- a/prizmer/templates/data_table/electric/91.html
+++ b/prizmer/templates/data_table/electric/91.html
@@ -1,6 +1,6 @@
 <script src="/static/liHighLight.js" type=text/javascript></script>
+{% if AllData %}
 <script type="text/javascript">
-	{% if AllData %}
     var ctx = document.getElementById("myChart").getContext('2d');
 	var myChart = new Chart(ctx, {
     type: 'line',
@@ -18,9 +18,8 @@
     }
 	}
 });
-	{% endif %}	
-
 	</script>
+{% endif %}	
 <span>Потребление электроэнергии в период с <strong>{{electric_data_start}}</strong> по <strong>{{electric_data_end}}</strong></span>
 <br>
 <span>Абонент: <strong>{{obj_title}}</strong></span>
@@ -58,25 +57,25 @@
 <tr>
 <td>{{value.0}}</td>
 <td>{{value.1}}</td>
-<td>{{value.20|floatformat}}</td>
-<td>{{value.23|floatformat}}</td>
-<td>{{value.2|floatformat:3}}</td>
-<td>{{value.3|floatformat:3}}</td>
-<td>{{value.4|floatformat:3}}</td>
-<td>{{value.5|floatformat:3}}</td>
+<td>{{value.20}}</td>
+<td>{{value.23}}</td>
+<td>{{value.2}}</td>
+<td>{{value.3}}</td>
+<td>{{value.4}}</td>
+<td>{{value.5}}</td>
 <!--<td>{{value.6}}</td>-->
-<td>{{value.7|floatformat:3}}</td>
-<td>{{value.8|floatformat:3}}</td>
-<td>{{value.9|floatformat:3}}</td>
-<td>{{value.10|floatformat:3}}</td>
+<td>{{value.7}}</td>
+<td>{{value.8}}</td>
+<td>{{value.9}}</td>
+<td>{{value.10}}</td>
 <!--<td>{{value.11}}</td>-->
-<td>{{value.12|floatformat:3}}</td>
+<td>{{value.12}}</td>
 <!--
 <td><strong>{{value.22}}</strong></td>
 -->
-<td>{{value.13|floatformat:3}}</td>
-<td>{{value.14|floatformat:3}}</td>
-<td>{{value.15|floatformat:3}}</td>
+<td>{{value.13}}</td>
+<td>{{value.14}}</td>
+<td>{{value.15}}</td>
 <!--<td>{{value.16}}</td>-->
 <!--
 <td>{{value.17}}</td>
