--- a/prizmer/templates/control.html
+++ b/prizmer/templates/control.html
@@ -50,6 +50,8 @@
             <option value="102">102. Показания на дату. 3 Тарифа</option>
             <option value="104">104. Показания на дату. 2 Тарифа</option>
             <option value="106">106. Показания на дату. 1 Тариф</option>
+            <option value="103">103. Потребление за период. 2 Тарифа</option>
+            <option value="105">105. Потребление за период. 1 Тариф</option>
         </select>
         <div id ="export_report">-------</div>
 		
