110 report for sreda

--- a/prizmer/templates/water.html
+++ b/prizmer/templates/water.html
@@ -51,7 +51,8 @@
 			<option value="85">85. Потребление по воде за период с теплосчётчиков Эльф</option>
 			<option value="87">87. Баланс за период с регистратора импульсов </option>
 			<option value="96">96. Текущие показания по воде с регистратора импульсов</option>
-			<option value="101">101. Потребление по воде с регистратора импульсов для бухгалтерии</option>
+			<option value="101">101. Потребление по воде с регистратора импульсов для бухгалтерии</option>            
+			<option value="110">110. Показания по воде на дату с регистратора импульсов</option>
 		</select>
         <div id ="export_report">-------</div>
     </div>
